--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,7 +7,8 @@
 
   /*========== Colors ==========*/
   /* Change favorite color */
-  --hue-color: 224; /*Blue 224 - Green 142 - Purple 250 - Pink 340*/
+  --hue-color: 224;
+  /*Blue 224 - Green 142 - Purple 250 - Pink 340*/
 
   /* HSL color mode */
   --first-color: hsl(var(--hue-color), 89%, 60%);
@@ -162,6 +163,7 @@ img {
 .section__subtitle {
   text-align: center;
 }
+
 /*==================== LAYOUT ====================*/
 .container {
   max-width: 768px;
@@ -259,6 +261,7 @@ img {
 .nav__close:hover {
   color: var(--first-color-alt);
 }
+
 /* show menu */
 .show-menu {
   bottom: 0;
@@ -321,11 +324,11 @@ img {
   font-size: var(--h3-font-size);
   color: var(--text-color);
   font-weight: var(--font-medium);
-  margin-bottom:0.35rem;
+  margin-bottom: 0.35rem;
 }
 
-.home__subtitle2{
-  font-size:0.7rem;
+.home__subtitle2 {
+  font-size: 0.7rem;
   color: #668;
   font-weight: 400;
   margin-bottom: var(--mb-0-75);
@@ -610,6 +613,7 @@ img {
   border-bottom: 3px solid var(--first-color-alt);
   border-radius: 0.2rem;
 }
+
 /*==================== Expertise ====================*/
 .Expertise__container {
   gap: 1.5rem;
@@ -703,6 +707,7 @@ img {
   color: var(--first-color);
   cursor: pointer;
 }
+
 .Expertise__modal-icon {
   color: var(--first-color);
   margin-right: var(--mb-0-25);
@@ -761,7 +766,7 @@ img {
   right: -0.5rem;
 }
 
-.swiper-container-horizontal > .swiper-pagination-bullets {
+.swiper-container-horizontal>.swiper-pagination-bullets {
   bottom: -2.5rem;
 }
 
@@ -907,30 +912,37 @@ img {
 .articles__header {
   display: flex;
 }
+
 .articles__data {
   justify-content: space-between;
   margin-bottom: var(--mb-0-1);
 }
+
 .articles__img {
   width: 60px;
   height: 60px;
   border-radius: 50%;
   margin-right: var(--mb-0-75);
 }
+
 .articles__name {
   font-size: var(--h2-font-size);
   font-weight: var(--font-medium);
 }
+
 .articles__client {
   font-size: var(--small-font-size);
   color: var(--text-color-light);
 }
+
 .articles__description {
   margin-bottom: var(--mb-2-5);
 }
+
 .articles__icon-star {
   color: var(--first-color);
 }
+
 .swiper-container .swiper-pagination-articles {
   bottom: 0;
 }
@@ -938,7 +950,8 @@ img {
 /*==================== FOOTER ====================*/
 .footer {
   padding-top: 2rem;
-  text-align: center; /* Allinea tutto al centro */
+  text-align: center;
+  /* Allinea tutto al centro */
 }
 
 .footer__container {
@@ -953,11 +966,15 @@ img {
 .footer__title {
   font-size: var(--h2-font-size);
   margin-bottom: var(--mb-0-25);
+  text-align: left;
 }
 
 .footer__subtitle {
   font-size: var(--small-font-size);
+  text-align: left;
+  font-weight: 500;
 }
+
 .footer__links {
   display: flex;
   flex-direction: column;
@@ -1012,13 +1029,15 @@ img {
   font-size: 1.5rem;
   color: #fff;
 }
+
 /* Show scroll */
 .show-scroll {
   bottom: 5rem;
 }
 
 .scrollup--footer {
-  background-color: white; /* which background color when scrollup reaches the footer */
+  background-color: white;
+  /* which background color when scrollup reaches the footer */
 }
 
 /*========== SCROLL BAR ==========*/
@@ -1032,6 +1051,7 @@ img {
   background-color: var(--scroll-thumb-color);
   border-radius: 0.5rem;
 }
+
 /*==================== MEDIA QUERIES ====================*/
 /* For small devices */
 @media screen and (max-width: 350px) {
@@ -1043,6 +1063,7 @@ img {
   .nav__menu {
     padding: 2rem 0.25rem 4rem;
   }
+
   .nav__list {
     column-gap: 0;
   }
@@ -1050,6 +1071,7 @@ img {
   .home__content {
     grid-template-columns: 0.25fr 3fr;
   }
+
   .home__blob {
     width: 180px;
   }
@@ -1066,9 +1088,11 @@ img {
     grid-template-columns: max-content;
     justify-content: center;
   }
+
   .Expertise__content {
     padding-right: 3.5rem;
   }
+
   .Expertise__modal {
     padding: 0 0.5rem;
   }
@@ -1076,15 +1100,18 @@ img {
   .project__img {
     width: 400px;
   }
+
   .articles__data,
   .articles__header {
     flex-direction: column;
     align-items: center;
   }
+
   .articles__img {
     margin-right: 0;
     margin-bottom: var(--mb-0-25);
   }
+
   .articles__data,
   .articles__description {
     text-align: center;
@@ -1096,9 +1123,11 @@ img {
   .home__content {
     grid-template-columns: max-content 1fr 1fr;
   }
+
   .home__data {
     grid-column: initial;
   }
+
   .home__img {
     order: 1;
     justify-self: center;
@@ -1131,6 +1160,7 @@ img {
   .section {
     padding: 6rem 0 2rem;
   }
+
   .section__subtitle {
     margin-bottom: 4rem;
   }
@@ -1139,6 +1169,7 @@ img {
     top: 0;
     bottom: initial;
   }
+
   .header,
   .main,
   .footer__container {
@@ -1149,15 +1180,18 @@ img {
     height: calc(var(--header-height) + 1.5rem);
     column-gap: 1rem;
   }
+
   .nav__icon,
   .nav__close,
   .nav__toggle {
     display: none;
   }
+
   .nav__list {
     display: flex;
     column-gap: 2rem;
   }
+
   .nav__menu {
     margin-left: auto;
   }
@@ -1169,16 +1203,20 @@ img {
   .home__container {
     row-gap: 5rem;
   }
+
   .home__content {
     padding-top: 5.5rem;
     column-gap: 2rem;
   }
+
   .home__blob {
     width: 270px;
   }
+
   .home__scroll {
     display: block;
   }
+
   .home__scroll-button {
     margin-left: 3rem;
   }
@@ -1186,15 +1224,19 @@ img {
   .about__container {
     column-gap: 5rem;
   }
+
   .about__img {
     width: 350px;
   }
+
   .about__description {
     text-align: initial;
   }
+
   .about__info {
     justify-content: space-between;
   }
+
   .about__buttons {
     justify-content: initial;
   }
@@ -1202,9 +1244,11 @@ img {
   .qualification__tabs {
     justify-content: center;
   }
+
   .qualification__button {
     margin: 0 var(--mb-1);
   }
+
   .qualification__sections {
     grid-template-columns: 0.5fr;
   }
@@ -1213,12 +1257,15 @@ img {
     grid-template-columns: repeat(3, 218px);
     justify-content: center;
   }
+
   .Expertise__icon {
     font-size: 2rem;
   }
+
   .Expertise__content {
     padding: 6rem 0 2rem 2.5rem;
   }
+
   .Expertise__modal-content {
     width: 450px;
   }
@@ -1226,6 +1273,7 @@ img {
   .portfolio__img {
     width: 320px;
   }
+
   .portfolio__content {
     align-items: center;
   }
@@ -1233,9 +1281,11 @@ img {
   .project {
     text-align: initial;
   }
+
   .project__bg {
     background: none;
   }
+
   .project__container {
     background-color: var(--first-color-second);
     border-radius: 1rem;
@@ -1243,6 +1293,7 @@ img {
     grid-template-columns: 1fr max-content;
     column-gap: 3rem;
   }
+
   .project__data {
     padding-top: 0.8rem;
   }
@@ -1250,16 +1301,20 @@ img {
   .footer__container {
     grid-template-columns: repeat(3, 1fr);
   }
+
   .footer__bg {
     padding: 3rem 0 3.5rem;
   }
+
   .footer__links {
     flex-direction: row;
     column-gap: 2rem;
   }
+
   .footer__socials {
     justify-self: flex-end;
   }
+
   .footer__copy {
     margin-top: 4.5rem;
   }
@@ -1267,6 +1322,7 @@ img {
 
 /* For large devices */
 @media screen and (min-width: 1024px) {
+
   .header,
   .main,
   .footer__container {
@@ -1276,6 +1332,7 @@ img {
   .home__blob {
     width: 320px;
   }
+
   .home__social {
     transform: translateX(-6rem);
   }
@@ -1287,18 +1344,23 @@ img {
   .portfolio__content {
     column-gap: 5rem;
   }
+
   .swiper-portfolio-icon {
     font-size: 3.5rem;
   }
+
   .swiper-button-prev {
     left: -3.5rem;
   }
+
   .swiper-button-next {
     right: -3.5rem;
   }
-  .swiper-container-horizontal > .swiper-pagination-bullets {
+
+  .swiper-container-horizontal>.swiper-pagination-bullets {
     bottom: 0;
   }
+
   .contact__inputs {
     grid-template-columns: repeat(2, 1fr);
   }
